syntax = "proto3";
package sigmoidtest.sigmoidtest;

option go_package = "sigmoid-test/x/sigmoidtest/types";

message FrontStakeRequest {
  
  string sender = 1; 
  string mint = 2; 
  uint64 status = 3; 
  uint64 amount = 4; 
  string transactionId = 5; 
}
